Fixes gap at bottom of blog pages

--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -9,7 +9,7 @@ body>main>section {
 }
 
 body>main>section:last-of-type {
-	margin-bottom: 5em;
+	padding-bottom: 5em;
 }
 
 body.no-scroll {
